--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>FruitLand</title>
   </head>
   <body>
-    <!--LOADER
+    <!--LOADER-->
     <div class="preloader">
         <div class="counter">0</div>
     </div>
-    -->
+    
   <!--END LOADER-->
     <!--MENU-->
     <div class="header">
