--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" />
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"crossorigin="anonymous"/>
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
       <link rel="stylesheet" href="css/estilos.css">
       <!--Fontawesome-->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -24,7 +24,7 @@
     <div class="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.svg" width="125px" />
+          <img src="img/logo.svg" width="125" alt="Logo" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
             <span id="circulo-cantidad">0</span>
             <li class="submenu">
               <a href=""  data-toggle="modal" data-target="#ModalCompra">
-              <img src="img/cart.png" id="img-carrito" />
+              <img src="img/cart.png" id="img-carrito" alt="icono carrito" />
             </a>
             </li>
           </ul>        
@@ -68,7 +68,7 @@
             Saber Mas &#8594;</a>
         </div>
         <div class="col-2">
-          <img src="img/fruits tropical.png" />
+          <img src="img/fruits-tropical.png" />
         </div>
       </div>
     
@@ -145,12 +145,11 @@
             </div>
     </div>
     </template>
-  </section>
+  <section>
   <div class="container pb-3">
     <h1 class="text-center py-5">Testimonios</h1>
     <div class="row" id="testimonios">        
     </div>
-
   </div>
   </section>
  
@@ -158,7 +157,7 @@
     <!-- Grid container -->
     <div class="container">
       <!-- Section: Social media -->
-      <section class="mb-2">
+      <div class="mb-2">
         <!-- Facebook -->
         <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
           ><i class="fa fa-facebook-official"></i
@@ -178,7 +177,7 @@
         ></a>
   
         
-      </section>
+          </div>
       <!-- Section: Social media -->
     </div>
     <!-- Grid container -->
