--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Saber Mas &#8594;</a>
         </div>
         <div class="col-2">
-          <img src="img/fruits-tropical.png" />
+          <img src="img/fruits-tropical.png"  alt="imagen principal"/>
         </div>
       </div>
     
@@ -147,7 +147,7 @@
     </template>
   <section>
   <div class="container pb-3">
-    <h1 class="text-center py-5">Testimonios</h1>
+    <h2 class="text-center py-5">Testimonios</h2>
     <div class="row" id="testimonios">        
     </div>
   </div>
@@ -186,7 +186,7 @@
     <div class="text-center">
       © 2021 Copyright:
       <a class="text-white" href="#">
-        <img src="/img/logo.svg" alt="" width="125px">
+        <img src="/img/logo.svg" alt="logo" width="125">
       </a>
     </div>
     <!-- Copyright -->
